# halo2wrong

ecc/: Cargo.toml
ecdsa/: Cargo.toml
halo2wrong/: Cargo.toml
integer/: Cargo.toml
maingate/: Cargo.toml
