[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
ecc = { path = "../ecc", default-features = false }
num-bigint = { git = "https://github.com/omarunpaired/num-bigint", features = [
    "rand",
] }
num-integer = "0.1"
num-traits = "0.2"
getrandom = { version = "0.2.15", features = ["js"] }
rand_core = { version = "0.6", default-features = false }
rand = "0.8"
subtle = { version = "2.3", default-features = false }

[features]
default = []
circuit-params = ["ecc/circuit-params"]
