[package]
name = "halo2wrong"
version = "0.1.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"

[dependencies]
num-bigint = { git = "https://github.com/omarunpaired/num-bigint", features = [
    "rand",
] }
num-integer = "0.1"
num-traits = "0.2"
halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0" }

[features]
default = []
circuit-params = ["halo2/circuit-params"]
